--- a/src/global.css
+++ b/src/global.css
@@ -5,20 +5,6 @@
 }
 
 :root {
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: #000000;
-  background-color: #ffffff;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  -webkit-text-size-adjust: 100%;
-
   --color-black: #000000;
   --color-white: #ffffff;
   --color-dark-grey: #757575;
@@ -34,13 +20,29 @@
   --color-top1: #e7aa00;
   --color-top2: #575757;
   --color-top3: #c97b23;
-  
+
   --color-best-new: #ff3530;
   --color-spotify: #1DB954;
   --color-instagram: #E1306C;
+
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: #000000;
+  background-color: #ffffff;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
+  overflow-y: scroll;
+
   min-width: 320px;
   max-width: 100vw;
   min-height: 100vh;
@@ -57,6 +59,7 @@ body {
 a {
   text-decoration: inherit;
 }
+
 a:hover {
   filter: brightness(1.1);
 }
@@ -83,7 +86,7 @@ button {
 
     color: #000000;
     background-color: #ffffff;
-  
+
     padding: 0.5rem 1rem;
     border: 2px solid #000000;
   }
